cmake_minimum_required(VERSION 3.5)

project(luckyhttp)

# 配置编译选项
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -g)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_BUILD_TYPE "Release")

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../bin)

# 头文件目录
include_directories(${PROJECT_SOURCE_DIR}/../../luckyao/src/include)

link_directories(${PROJECT_SOURCE_DIR}/../../luckyao/bin)

# 定义参与编译的源代码文件 
aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_BASE)
 

add_executable(luckyhttp  ${SRC_BASE})

target_link_libraries(luckyhttp 
    luckyao
    pthread
)